--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,24 @@
-:root {
-    --first-main-color: #ffffff;
-    --second-main-color: #2196F3;
-    --header-line: #ECECEC;
-    --studio-logo-color: #000000;
-    --header-mail-and-tel-and-p: #757575;
-    --hero-button-shadow: #00000026;
-    --textheader-color-and-nav: #212121;
-    --worker-section-color: #F5F4FA;
-    --worker-box-shadow-first: #00000033;
-    --worker-box-shadow-second: #00000024;
-    --worker-box-shadow-third: #0000001F;
-    --footer-mail-and-tel: #ffffff99;
-    --footer-and-hero-color: #2F303A;
-    --portdolio-container: #EEEEEE;
-}
-
-body {
-    font-family: 'Roboto';
-}
-
 .header__logo {
-    font-family: 'Raleway';
+    font-family: Raleway;
     font-size: 26px;
     font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-align: left;
+}
+
+.nav__list__link{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-align: left;
+}
+
+.contacts__list__link{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-align: left;
 }
