--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -3,3 +3,13 @@
     font-size: 26px;
     font-weight: 700;
 }
+
+.container {
+    width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.portfolio{
+    margin: 0 94px;
+}
