--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,50 @@
+:root{
+    --white-color: white;
+    --black-color: black;
+}
+
+button{
+    outline: none;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;    
+}
+
+a{
+    text-decoration: none;
+}
+
 *{
     padding: 0;
     margin: 0;
 }
+
+:hover{
+    transition: 0.5s;
+}
+
+/* CONTAINER */
+
+.container {
+    width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+/* HEADER */
+.header{
+    height: 80px;
+    background-color: var(--white-color);
+    width: 100%;
+}
+
+.header__content__wrap{
+    height: 80px;
+    display: flex;
+    align-items: center;
+    gap: 93px;
+}
+
 
 .header__logo {
     font-family: Raleway;
@@ -10,7 +53,27 @@
     line-height: 1.2;
     letter-spacing: 0.03em;
     text-align: left;
+    color: #2196F3;
 }
+
+.header__logo > span{
+    color: var(--black-color);
+}
+
+.nav__list {
+    display: flex;
+    list-style-type: none;
+    gap: 50px;
+}
+
+.contacts__list {
+    display: flex;
+    list-style-type: none;
+    margin-left: auto;
+    gap: 50px;
+}
+
+
 
 .nav__list__link{
     font-size: 14px;
@@ -28,98 +91,223 @@
     text-align: left;
 }
 
-.container{
-    width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
+.nav__list__link{
+    color: #212121;
 }
+
+.nav__list__link:hover {
+    color: #2196F3;
+}
+
+.contacts__list__link {
+    color: #757575;
+}
+
+.contacts__list__link:hover {
+    color: #2196F3;
+}
+
+/* HERO */
 
 .hero{
     padding: 200px 0;
+    background-color: #2F303A;
 }
 
-.features{
-    margin: 94px 0;
-}
-
-.work {
-    margin: 94px 0;
-}
-
-.team{
-    padding: 94px 0;
-}
-.nav{
-    display: inline-block;
-}
-
-.nav__list {
-    display: inline-flex;
-    flex-direction: row;
-    list-style-type: none;
-    flex-wrap: wrap;
-}
-
-.contacts__list {
-    display: inline-flex;
-    flex-direction: row;
-    list-style-type: none;
-    flex-wrap: wrap;
-}
-
-.features__list {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    flex-wrap:wrap;
-}
-
-.work__list {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    list-style-type: none;
-    flex-wrap:wrap;
-}
-
-.team__list {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    list-style-type: none;
-    flex-wrap:wrap;
-}
-
-.address__list {
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-    flex-wrap:wrap;
-}
-
-.team__list__img{
-    height: 260px;
-    width: 270px;
-}
-
-.hero__title{
-    display: flex;
-    justify-content: center;
+.hero__title {
     text-align: center;
+    color: var(--white-color);
+    font-size: 44px;
+    font-weight: 900;
+    text-transform: uppercase;
+    line-height: 1.4;
+    letter-spacing: 0.06em;
+    width: 696px;
+    margin: 0 auto;
 }
 
 .order__button {
     display: block;
     margin: 0 auto;
+    background-color: #2196F3;
+    color: var(--white-color);
+    border-radius: 4px;
+    padding: 10px 32px;
+    margin-top: 40px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.9;
+    letter-spacing: 0.06em;
+    text-align: center;
+}
+
+.order__button:hover {
+    background-color: var(--white-color);
+    color: #2196F3;
+}
+
+/* FEATURES */
+
+.features{
+    margin: 94px 0;
+}
+
+.features__list {
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
+.features__list__item {
+    width: 270px;
+}
+
+.features__list__title{
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
+    margin-bottom: 10px;
+    color: #212121;
+}
+
+.features__list__description{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+/* WORK */
+
+.work {
+    margin: 94px 0;
 }
 
 .work__title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+}
+
+.work__list {
     display: flex;
     justify-content: center;
+    list-style-type: none;
+    flex-wrap: wrap;
+    gap: 30px;
+}
 
+.work__list__img{
+    width: 370px;
+    height: 294px;
+}
+
+/* TEAM */
+
+.team{
+    padding: 94px 0;
+    background-color: #F5F4FA;
 }
 
 .team__title {
+    font-family: Roboto;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: #212121;
+    margin-bottom: 50px;
+}
+
+.team__list {
     display: flex;
     justify-content: center;
+    list-style-type: none;
+    gap: 30px;
+}
+
+.team__list__item{
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--white-color);
+    box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 1px 0px #00000024, 0px 1px 3px 0px #0000001F;
+}
+
+.team__list__img{
+    height: 260px;
+}
+
+.team__list__container{
+    padding: 30px 0;
+}
+
+.team__list__title{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: #212121;
+}
+
+.team__list__description {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: #757575;
+    margin-top: 10px;
+}
+
+/* FOOTER */
+
+.footer{
+    background-color: #2F303A;
+    padding: 60px 0;
+}
+
+.footer__logo {
+    font-family: Raleway;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-align: left;
+    color: #2196F3;
+}
+
+.footer__logo>span {
+    color: var(--white-color);
+}
+
+.address__list {
+    margin-top: 20px;
+    list-style-type: none;
+}
+
+.address__list__item{
+    height: 21px;
+    margin-bottom: 10px;
+}
+
+.address__list__link{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    color: #FFFFFF99;
+}
+
+.address__list__address{
+    color: var(--white-color);
 }
