--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,27 @@
 img{
     display: block;
 }
+
+ul{
+    list-style: none;
+}
+
+button {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+:hover {
+    transition: 0.5s;
+}
