--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -137,6 +137,13 @@
 
 }
 
+.portfolio__list__img{
+    width: 100%;
+}
+.portfolio__list__item{
+    flex-basis: calc((1170px - 60px)/3);
+}
+
 .portofolio__list__container{
     padding: 20px 0 20px 24px;
     border: 1px solid #EEEEEE;
