--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -172,6 +172,11 @@
     padding: 60px 0;
 }
 
+.footer__wrap {
+    display: flex;
+    column-gap: 70px
+}
+
 .footer__logo {
     font-family: Raleway;
     font-size: 26px;
@@ -206,4 +211,35 @@
 
 .address__list__address {
     color: var(--white-color);
+}
+
+.footer__join__title {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+    margin-top: 12px;
+}
+
+.footer__social__medias {
+    display: flex;
+    column-gap: 10px;
+    margin-bottom: 30px;
+}
+
+.footer__social__media__link {
+    fill: #FFFFFF;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF1A;
+}
+
+.footer__social__media__link:hover {
+    background-color: #2196F3;
 }
