--- a/css/style.css
+++ b/css/style.css
@@ -333,13 +333,17 @@
     margin-top: 50px;
 }
 
+.clients__list__item{
+    flex-basis: calc((100% - 150px) / 6);
+}
+
 .clients__item__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 16px 32px;
     outline: 1px solid #AFB1B8;
     border-radius: 4px;
+    height: 92px;
 }
 
 .clients__logo{
